<resources>
    <string name="app_name">App Music</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="list_song_hint">Danh Sách bài hát</string>
    <string name="start_direction_title">00:00</string>
    <string name="end_direction_title">Loading...</string>
    <string name="playlist_title">bài hát bởi Music App</string>
    <string name="main_activity_title">Your Song</string>
    <string name="search_main_activity_hint">Search your favorite song</string>
    <string name="back_btn">back</string>
    <string name="shuffle_title_btn">Phát ngẫu nhiên</string>
    <string name="list_song_title">Danh sách bài hát</string>
    <string name="name_song_title">Bài hát</string>
    <string name="album_song_title">Album</string>
    <string name="author_song_title">Nghệ sĩ</string>
    <string name="category_song_title">Thể loại</string>
    <string name="playlist_fragment_title">Playlist gợi ý</string>
    <string name="add_list_play_notification">Đã thêm vào danh sách phát</string>
    <string name="add_play_next_notification">Đã chuyển thành bài hát kế tiếp</string>
    <string name="add_favorite_notification">Đã thêm vào thư viện</string>
    <string name="remove_favorite_notification">Đã xóa khỏi thư viện</string>
    <string name="add_to_playlist_title">Thêm vào danh sách phát</string>
    <string name="add_to_next_song_title">Phát kế tiếp</string>
    <string name="add_to_favorite_title">Thêm vào thư viện</string>
    <string name="set_time_title">Hẹn giờ</string>
    <string name="equalizer_title">Equalizer</string>
    <string name="see_author_title">Xem nghệ sĩ</string>
    <string name="one_hour_timer_title">1 giờ</string>
    <string name="half_hour_timer_title">30 phút</string>
    <string name="quarter_hour_timer_title">15 phút</string>
    <string name="search_song_and_author_title">Tìm kiếm bài hát và tác giả</string>
    <string name="unfinished_title">Tính năng đang phát triển</string>
    <string name="delete_fav_title">Xóa khỏi thư viện</string>
    <string name="new_user_sign_up">New User?<b>Sign up</b></string>
    <string name="show_more_tittle">Xem tất cả</string>
    <string name="hot_playlist_title">Playlist hot</string>
    <string name="add_playlist_title">Tạo playlist</string>
    <string name="delete_playlist_title">Playlist của bạn sẽ bị xóa khỏi thư viện?</string>
    <string name="delete_album_title">Album của bạn sẽ bị xóa khỏi thư viện?</string>
    <string name="delete_author_title">Nghệ sĩ này sẽ bị xóa khỏi thư viện?</string>
    <string name="delete_song_title">Xóa bài hát khỏi thư viện ?</string>
    <string name="add_song_to_playlist_title">Thêm vào playlist</string>
    <string name="followedAuthorTitle">Đã theo dõi</string>
    <string name="followAuthorTitle">Theo dõi</string>
    <string name="error_add_fav_title">Đã có lỗi trong quá trình thêm</string>
    <string name="not_find_data_search_title">Rất tiếc không có kết quả phù hợp</string>
</resources>