<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:background="@drawable/dialog_bg">

    <TextView
        android:id="@+id/timerTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Hẹn giờ tắt"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_marginBottom="20dp"
        />
    <LinearLayout
        android:id="@+id/statusTimerLn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="20dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Tắt hẹn giờ"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:layout_marginEnd="8dp"
            />
        <TextView
            android:id="@+id/timeRemainingTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="(Còn lại n phút)"
            android:textColor="@color/purple_500"
            />
    </LinearLayout>
    <TextView
        android:id="@+id/setQuarterTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quarter_hour_timer_title"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:layout_marginBottom="20dp"
        />
    <TextView
        android:id="@+id/setHalfTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/half_hour_timer_title"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:layout_marginBottom="20dp"
        />
    <TextView
        android:id="@+id/setOneTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/one_hour_timer_title"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:layout_marginBottom="20dp"
        />
</LinearLayout>