<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/shape_dialog_1"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:id="@+id/timerTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="Hẹn giờ tắt"
        android:textColor="@color/textColor"
        android:textSize="@dimen/title_size"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/statusTimerLn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="Tắt hẹn giờ"
            android:textColor="@color/textColor"
            android:textSize="@dimen/name_size" />

        <TextView
            android:id="@+id/timeRemainingTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="(Còn lại n phút)"
            android:textColor="@color/purple_500"
            android:textSize="@dimen/name_size" />
    </LinearLayout>

    <TextView
        android:id="@+id/setQuarterTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/quarter_hour_timer_title"
        android:textColor="@color/textColor"
        android:textSize="@dimen/name_size" />

    <TextView
        android:id="@+id/setHalfTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/half_hour_timer_title"
        android:textColor="@color/textColor"
        android:textSize="@dimen/name_size" />

    <TextView
        android:id="@+id/setOneTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/one_hour_timer_title"
        android:textColor="@color/textColor"
        android:textSize="@dimen/name_size" />
</LinearLayout>