<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:orientation="vertical"
    android:background="@drawable/shape_dialog_1">
    <LinearLayout
        android:id="@+id/setupLn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="20dp"
        >
        <LinearLayout
            android:id="@+id/setTimeLn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            >
            <ImageButton
                android:id="@+id/setTimeIb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_set_time"
                android:background="@android:color/transparent"
                android:layout_gravity="center"
                />
            <TextView
                android:id="@+id/setTimeTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/set_time_title"
                android:textSize="14sp"
                android:textColor="@color/black"
                android:layout_gravity="center"
                />

        </LinearLayout>
        <LinearLayout
            android:id="@+id/setEqualizerLn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            >
            <ImageButton
                android:id="@+id/setEqualizerIb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_equalizer"
                android:background="@android:color/transparent"
                android:layout_gravity="center"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text= "@string/equalizer_title"
                android:textSize="14sp"
                android:textColor="@color/black"
                android:layout_gravity="center"
                />
        </LinearLayout>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/songRl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        >
        <ImageView
            android:id="@+id/imgDlIv"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@mipmap/music_player_icon"
            android:scaleType="centerCrop"
            android:layout_centerVertical="true"
            android:layout_marginEnd="20dp"
            />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/imgDlIv"
            android:orientation="vertical"
            android:layout_centerVertical="true"
            >
            <TextView
                android:id="@+id/nameSongTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Song"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold"

                />
            <TextView
                android:id="@+id/authorSongTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Author"

                />
        </LinearLayout>
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grayBt"
        android:layout_marginBottom="20dp"/>

    <LinearLayout
        android:id="@+id/addFavoriteLn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="20dp"
        >

        <ImageButton
            android:id="@+id/addFavIb"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginEnd="15dp"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_add_library" />
        <TextView
            android:id="@+id/addFavTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_to_favorite_title"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:layout_gravity="center"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/addPlaylistLn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="20dp"
        >
        <ImageButton
            android:id="@+id/addPlaylistIb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_playlist_add"
            android:background="@android:color/transparent"
            android:layout_gravity="center"
            android:layout_marginEnd="15dp"
            />
        <TextView
            android:id="@+id/addPlaylistTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_song_to_playlist_title"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:layout_gravity="center"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/seeAuthorLn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="20dp"
        >
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_author"
            android:background="@android:color/transparent"
            android:layout_gravity="center"
            android:layout_marginEnd="15dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/see_author_title"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:layout_gravity="center"
            />
    </LinearLayout>

</LinearLayout>