<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/shape_dialog_1"
    android:orientation="vertical"
    android:padding="20dp">

    <RelativeLayout
        android:id="@+id/songRl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/imgDlIv"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_centerVertical="true"
            android:layout_marginEnd="20dp"
            android:scaleType="centerCrop"
            android:src="@mipmap/music_player_icon"
            app:strokeColor="@android:color/transparent"
            app:shapeAppearanceOverlay="@style/rounded_corner" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@id/imgDlIv"
            android:orientation="vertical">

            <TextView
                android:id="@+id/nameSongTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Song"
                android:textColor="@color/textColor"
                android:textSize="@dimen/name_size"
                android:textStyle="bold"

                />

            <TextView
                android:id="@+id/authorSongTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Author"
                android:textColor="@color/textColor"
                android:textSize="@dimen/name_size"

                />
        </LinearLayout>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="20dp"
        android:background="@color/grayBt" />

    <LinearLayout
        android:id="@+id/addPlaySongsLn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="15dp"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_add_playlist_play" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/add_to_playlist_title"
            android:textColor="@color/textColor"
            android:textSize="@dimen/name_size" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/addPlayNextLn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal">

        <ImageButton

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="15dp"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_add_play_next" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/add_to_next_song_title"
            android:textColor="@color/textColor"
            android:textSize="@dimen/name_size" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/addFavLn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/addFavIb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="15dp"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_add_library" />

        <TextView
            android:id="@+id/addFavTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/add_to_favorite_title"
            android:textColor="@color/textColor"
            android:textSize="@dimen/name_size" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/addPlaylistLn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/addPlaylistIb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="15dp"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_playlist_add" />

        <TextView
            android:id="@+id/addPlaylistTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/add_song_to_playlist_title"
            android:textColor="@color/textColor"
            android:textSize="@dimen/name_size" />
    </LinearLayout>
</LinearLayout>