<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MusicPlayerActivity"
    android:paddingTop="20dp">

    <ImageButton
        android:id="@+id/backIb"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/ic_back_gr"
        android:scaleType="fitXY"
        android:background="@android:color/transparent"
        android:layout_alignParentStart="true"
        android:layout_marginStart="20dp"
        android:contentDescription="@string/back_btn" />

    <TextView
        android:id="@+id/nameSongTv"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:text="Song"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:layout_centerHorizontal="true"
        android:gravity="center"


        />
    <TextView
        android:id="@+id/authorSongTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/nameSongTv"
        android:text="Author"
        android:layout_centerHorizontal="true"
        android:textSize="15sp"
        />
    <ImageButton
        android:id="@+id/menuIb"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/ic_more"
        android:background="@android:color/transparent"
        android:scaleType="fitXY"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="20dp"
        />

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/playMusicVp2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/seeBar"
        android:layout_alignParentTop="true"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="120dp"
        android:layout_centerVertical="true"/>

    <SeekBar
        android:id="@+id/seeBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/playMusicLl"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="9dp"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="9dp"
        android:layout_marginBottom="9dp"
        android:progressTint="@color/purple_500"
        android:thumbTint="@color/purple_500" />

    <TextView
        android:id="@+id/startDirection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_direction_title"
        android:layout_alignParentStart="true"
        android:layout_alignBottom="@+id/seeBar"
        android:layout_marginBottom="20dp"
        android:layout_marginStart="10dp"
        />
    <TextView
        android:id="@+id/endDirection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/end_direction_title"
        android:layout_alignParentEnd="true"
        android:layout_alignBottom="@+id/seeBar"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="10dp"
        />
    <LinearLayout
        android:id="@+id/playMusicLl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:layout_marginBottom="40dp"
        >

        <ImageButton
            android:id="@+id/shuffleIb"
            android:layout_width="50dp"
            android:layout_height="50dp"

            android:background="@android:color/transparent"
            android:src="@drawable/ic_shuffle_gray"
            android:scaleType="fitXY"
            android:layout_marginEnd="30dp"/>

        <ImageButton
            android:id="@+id/previousIb"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_previous"
            android:scaleType="fitXY"
            android:layout_marginEnd="30dp"
            />
        <ImageButton
            android:id="@+id/playIb"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_play"
            android:scaleType="fitXY"
            android:layout_marginEnd="30dp"
            />
        <ImageButton
            android:id="@+id/nextIb"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_next"
            android:scaleType="fitXY"
            android:layout_marginEnd="30dp"
            />
        <ImageButton
            android:id="@+id/repeatIb"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_repeat_gray"

            android:scaleType="fitXY"
            />

    </LinearLayout>

    <ImageButton
        android:id="@+id/favoriteIb"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignBottom="@+id/seeBar"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="80dp"
        android:background="@android:color/transparent"
        android:scaleType="fitXY"
        android:src="@drawable/ic_favorite_gray"

        />
    <ImageButton
        android:id="@+id/listSongIb"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignParentEnd="true"
        android:layout_alignBottom="@id/seeBar"
        android:background="@android:color/transparent"
        android:src="@drawable/ic_list_playlist_play"
        android:scaleType="fitXY"
        android:layout_marginBottom="80dp"
        android:layout_marginEnd="10dp"
        />

    <TextView
        android:id="@+id/listTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/listSongIb"
        android:layout_alignBottom="@+id/listSongIb"
        android:layout_toStartOf="@id/listSongIb"
        android:text="@string/list_song_hint"
        android:gravity="center"
        android:layout_marginEnd="20dp"
        android:textSize="15sp"
        android:textColor="@color/black"/>
</RelativeLayout>